[tool.poetry]
name = "upload.io"
version = "0.1.0"
description = ""
authors = ["mirko <an_mich_bitte@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^4.2.1"
requests = "^2.24.0"
pandas = "^1.1.1"
psycopg2 = "^2.8.5"
watchdog = "^0.10.3"
sqlalchemy = "^1.3.19"
urllib3 = "^1.25.10"
pyyaml = "^5.3.1"
schema = "^0.7.3"
attrs = "^20.2.0"
astropy = "^4.0.1"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pylint = "^2.6.0"
flake8 = "^3.8.3"
invoke = "^1.4.1"
mypy = "^0.782"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
